--- a/project/mysh.css
+++ b/project/mysh.css
@@ -19,7 +19,7 @@
 		margin-top:16px;
 		width: auto;
 		height: auto;
-		margin-right: 19px;
+		margin-right: 4.5%;
 		font-size:130%;
 		text-align: center;	
 	}
